; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbnames.c_AcpiDbCheckIntegrity.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbnames.c_AcpiDbCheckIntegrity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@ACPI_TYPE_ANY = common dso_local global i32 0, align 4
@ACPI_ROOT_OBJECT = common dso_local global i32 0, align 4
@ACPI_UINT32_MAX = common dso_local global i32 0, align 4
@AcpiDbIntegrityWalk = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"Verified %u namespace nodes with %u Objects\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiDbCheckIntegrity() #0 {
  %1 = alloca %struct.TYPE_2__, align 4
  %2 = bitcast %struct.TYPE_2__* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %2, i8 0, i64 16, i1 false)
  %3 = load i32, i32* @ACPI_TYPE_ANY, align 4
  %4 = load i32, i32* @ACPI_ROOT_OBJECT, align 4
  %5 = load i32, i32* @ACPI_UINT32_MAX, align 4
  %6 = load i32, i32* @AcpiDbIntegrityWalk, align 4
  %7 = bitcast %struct.TYPE_2__* %1 to i8*
  %8 = call i32 @AcpiWalkNamespace(i32 %3, i32 %4, i32 %5, i32 %6, i32* null, i8* %7, i32* null)
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %12)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @AcpiWalkNamespace(i32, i32, i32, i32, i32*, i8*, i32*) #2

declare dso_local i32 @AcpiOsPrintf(i8*, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
